<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_tipo"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rgTipoDeporte"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <RadioButton
                android:id="@+id/rbIndividual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/rb_individual"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbPareja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/rb_pareja"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbGrupo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/rb_grupo"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_deporte"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spDeportes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp" />

    <EditText
        android:id="@+id/txtMostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/txt_color"
        android:textSize="50sp" />

</LinearLayout>